Bug 170805 - Writer & Calc crash when upgrade icon is clicked
Summary: Writer & Calc crash when upgrade icon is clicked
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.8.0 target:26.2.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2026-02-15 05:56 UTC by Carl Brewer
Modified: 2026-03-04 18:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carl Brewer 2026-02-15 05:56:09 UTC
Click on "upgrade" icon (top right of screen) crashes Writer & Calc.
May be related to the crashreport.libreoffice.org connection issue - https://crashreport.libreoffice.org is failing with SSL errors.

https://crashreport.libreoffice.org/stats/crash_details/20dee6f9-403f-4089-9ab4-9882cb66f9fd

Isn't responding, SSL error.

Secure Connection Failed

The connection to crashreport.libreoffice.org was interrupted while the page was loading.

    The page you are trying to view cannot be shown because the authenticity of the received data could not be verified.
    Please contact the website owners to inform them of this problem.

Learn more… 


to reproduce - "help" -> "check for updates"

Checking for an update failed.
Error reading data from the Internet.
Server error message: 
GET
=>
HTTP/1.1 403 Forbidden.


Then the "updates for extensions available" icon is visible, click that, crash ...
Comment 1 m_a_riosv 2026-02-15 22:47:00 UTC Comment hidden (obsolete)
Comment 2 Mike Kaganski 2026-02-22 07:05:01 UTC
Has nothing to do with bug 170746. This is a crasher for *extensions* update icon.

Steps:
1. Install an old version of an extension (e.g., old APSO).
2. Restart LO.
3. Tools->Extensions, click [Check for Updates] -> when updates found, click [Close] (step 3 is to speed up the check, not really necessary - the background check will show the top-right icon anyway)
4. When the "Updates for extensions available" icon shows in the top right, click it

=> crash
Comment 3 Mike Kaganski 2026-02-22 08:29:49 UTC
Most likely regression after 3c20c8ed01bde299d3e40186edcd3a6021baeee3 - hard to tell because bisect repos lack automatic update check.

No, it's not "always non-null": it is destroyed in the call to myExtMgr->Close() in ServiceImpl::startExecuteModal, and the thread happily tries to dereference the destroyed object.
Comment 4 Michael Weghorn 2026-02-24 09:08:32 UTC
(In reply to Mike Kaganski from comment #3)
> Most likely regression after 3c20c8ed01bde299d3e40186edcd3a6021baeee3 - hard
> to tell because bisect repos lack automatic update check.
> 
> No, it's not "always non-null": it is destroyed in the call to
> myExtMgr->Close() in ServiceImpl::startExecuteModal, and the thread happily
> tries to dereference the destroyed object.

Thanks for the analysis.

I don't see any issue with 3c20c8ed01bde299d3e40186edcd3a6021baeee3 itself.  `Thread::m_pDialogHelper` was technically "always non-null" as it was never set to null before the above commit. (It was non-null, but a dangling pointer after the object was destroyed before the above commit, i.e. the problem was effectively the same as the reference to the deleted object with the commit in place.)

This is a regression from another commit part of some extension manager refactoring, however:

    commit 5a6985c124c7a0ca246fbc920ab5e024d72a5e4a
    Author: Michael Weghorn
    Date:   Sat Nov 8 09:42:17 2025 +0100

        tdf#169318 extension mgr: Deduplicate close logic

Pending fix:

https://gerrit.libreoffice.org/c/core/+/200151
Comment 5 m_a_riosv 2026-02-24 12:45:27 UTC Comment hidden (obsolete)
Comment 6 Commit Notification 2026-02-24 22:50:42 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f379e1c62b6303189d1223d2b6233cf3bf1072d0

tdf#170805 extension mgr: Use more specific weld::Dialog

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2026-02-24 22:51:45 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f626a166ed8b7917c8acc40652a7dcc696fa137

tdf#170805 extension mgr: Don't destroy dialog while still needed

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Weghorn 2026-02-24 22:52:13 UTC
(In reply to Michael Weghorn from comment #4)
> Pending fix:
> 
> https://gerrit.libreoffice.org/c/core/+/200151

Fixed in master now. Backport for 26-2 pending in Gerrit:
https://gerrit.libreoffice.org/c/core/+/200271
Comment 9 Commit Notification 2026-02-27 05:09:35 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/ae7b1f25e81de9418b7497db80bc1e2ff770c9e4

tdf#170805 extension mgr: Don't destroy dialog while still needed

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2026-03-04 18:11:29 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/c8a531500bb9e7721d99fd21bcc8149cfb7f0ae9

tdf#170805 extension mgr: Use more specific weld::Dialog

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.