tdf#170805 extension mgr: Use more specific weld::Dialog

Return and use the more specific weld::Dialog
subclass in TheExtensionManager::getDialog
instead of just weld::Window.

Change-Id: I931864f8117af87386761f0838b4f3970d9d8c62
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200150
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit f379e1c62b6303189d1223d2b6233cf3bf1072d0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200270
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>