desktop/source/deployment/gui/dp_gui_theextmgr.cxx
@@ -149,7 +149,7 @@ void TheExtensionManager::SetText( const OUString &rTitle )
 {
     const SolarMutexGuard guard;
 
-    if (weld::Window* pDialog = getDialog())
+    if (weld::Dialog* pDialog = getDialog())
         pDialog->set_title( rTitle );
 }
 
@@ -158,7 +158,7 @@ void TheExtensionManager::ToTop()
 {
     const SolarMutexGuard guard;
 
-    if (weld::Window* pDialog = getDialog())
+    if (weld::Dialog* pDialog = getDialog())
         pDialog->present();
 }
 
@@ -197,7 +197,7 @@ sal_Int16 TheExtensionManager::execute()
 
 bool TheExtensionManager::isVisible()
 {
-    weld::Window* pDialog = getDialog();
+    weld::Dialog* pDialog = getDialog();
     return pDialog && pDialog->get_visible();
 }
 
